# CodingPractice

./: Cargo.toml
codehia/algo_practice/: pyproject.toml
codehia/algo_practice/algo_practice/: max_min_in_array.py  reverse_array.py
codehia/algo_practice/tests/: __init__.py  test_max_min_in_array.py  test_reverse_array.py
src/: main.rs  sanchayan.rs
src/sanchayan/: Array.rs
src/sanchayan/Array/: program_1.rs  program_2.rs  program_3.rs  program_4.rs  program_5.rs  program_6.rs  program_7.rs  program_8.rs  program_9.rs
