[tool.poetry]
name = "algo-practice"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "algo_practice"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.3.1"
ipython = "^8.12.0"
ipdb = "^0.13.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
